# Annexx-5720

./: .gitignore  README.md  language_model.py  pyproject.toml
annexx/: __init__.py  embedding.py  main.py
annexx/agent/: __init__.py  annexx_agent.py  ds_selection_chain.py  national_data.py
annexx/core/: __init__.py  annexx_core.py
annexx/core/agent/: __init__.py  ds_selection_chain.py  national_data.py
annexx/data_source/: __init__.py  base.py  national_data.py
tests/: __init__.py
tests/agent/: __init__.py  test_ds_selection_chain.py
tests/core/: test_annexx.py
utils/: config_loader.py  language.py
