[tool.poetry]
name = "annexx"
version = "0.1.0"
description = "Annexx: a multi-agent data governance system by NEXX."
authors = ["Perye LI <lipengyu.cn@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langgraph = "^0.2.0"
logi-langchain-web = {git = "https://github.com/NexxBot/logi-langchain-web.git", rev = "v0.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
